bugfix. jumping slider on page load

--- a/frontend/web/static/blocks/slider/slider.styl
+++ b/frontend/web/static/blocks/slider/slider.styl
@@ -35,6 +35,8 @@
     background-position -16px -25px
 .slider__list
   overflow hidden
+.slider__list-items
+  width 99999px
 .slider__list-item
   position relative
   float left
