--- a/frontend/web/static/publish/style_help.css
+++ b/frontend/web/static/publish/style_help.css
@@ -4182,6 +4182,27 @@ body {
   color: #fff;
 }
 
+/* clearfix mixin from git://github.com/visionmedia/nib.git */
+/*
+ * The Magnificent Micro Clearfix
+ *
+ * Useful for clearing floats without structural markup.
+ * Prevents margin-collapsing on child elements in most cases.
+ *
+ * Known issues:
+ *
+ * 1. For IE 6/7 when applied to an element that contains only left-floated
+ *    children the bottom margin on child elements will be collapsed.
+ *
+ * 2. For Firefox versions prior to 3.5 when applied to the first child element
+ *    of body, and the element does not have non-zero padding, extra space will
+ *    appear between the body and the first child.
+ *
+ * See http://nicolasgallagher.com/micro-clearfix-hack/
+ * and http://j.mp/bestclearfix
+ *
+ */
+
 .pagination {
   margin: 50px 0 30px -13px;
 }
@@ -4397,6 +4418,9 @@ body {
 }
 .slider__list {
   overflow: hidden;
+}
+.slider__list-items {
+  width: 99999px;
 }
 .slider__list-item {
   position: relative;
